Bug #3811 <https://bugs.freedesktop.org/show_bug.cgi?id=3811> GNU/kFreeBSD     support for xload & memleak (Robert Millan)